# Messanger-c-

MyClient/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  messanger.cpp  messanger.h  messanger.ui
Server/: CMakeLists.txt  MyServer.cpp  MyServer.h  main.cpp  messages.json
